--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -354,6 +354,7 @@ check_symbol_exists(dlsym "dlfcn.h" HAVE_DLSYM)
 check_function_exists(pthread_getthreadid_np HAVE_PTHREAD_GETTHREADID_NP)
 check_function_exists(pthread_threadid_np HAVE_PTHREAD_THREADID_NP)
 check_function_exists(gettid HAVE_GETTID)
+check_function_exists(waitid HAVE_WAITID)
 check_function_exists(nice HAVE_NICE)
 check_function_exists(recvmmsg HAVE_RECVMMSG)
 check_function_exists(getpriority HAVE_GETPRIORITY)
