--- a/packaging/cmake/config.cmake.h.in
+++ b/packaging/cmake/config.cmake.h.in
@@ -50,6 +50,7 @@
 #cmakedefine HAVE_PTHREAD_GETTHREADID_NP
 #cmakedefine HAVE_PTHREAD_THREADID_NP
 #cmakedefine HAVE_GETTID
+#cmakedefine HAVE_WAITID
 #cmakedefine HAVE_NICE
 #cmakedefine HAVE_GETPRIORITY
 #cmakedefine HAVE_DLSYM
