structure for an internal windows plugin

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1233,6 +1233,9 @@ set(FREEBSD_PLUGIN_FILES
 )
 
 set(WINDOWS_PLUGIN_FILES
+        src/collectors/windows.plugin/windows_plugin.c
+        src/collectors/windows.plugin/windows_plugin.h
+        src/collectors/windows.plugin/GetSystemTimes.c
 )
 
 set(PROC_PLUGIN_FILES
