Fix runtime path

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2270,7 +2270,7 @@ install(DIRECTORY COMPONENT netdata DESTINATION var/cache/netdata)
 install(DIRECTORY COMPONENT netdata DESTINATION var/log/netdata)
 install(DIRECTORY COMPONENT netdata DESTINATION var/lib/netdata/registry)
 install(DIRECTORY COMPONENT netdata DESTINATION var/lib/netdata/cloud.d)
-install(DIRECTORY COMPONENT netdata DESTINATION var/run)
+install(DIRECTORY COMPONENT netdata DESTINATION var/run/netdata)
 install(DIRECTORY COMPONENT netdata DESTINATION etc/netdata)
 install(DIRECTORY COMPONENT netdata DESTINATION etc/netdata/custom-plugins.d)
 install(DIRECTORY COMPONENT netdata DESTINATION etc/netdata/go.d)
