--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1853,9 +1853,9 @@ endif()
 
 if(ENABLE_PLUGIN_CUPS)
     pkg_check_modules(CUPS libcups)
-    if(NOT CUPS_LIBRARIES)
+    if(NOT CUPS_FOUND)
         pkg_check_modules(CUPS cups)
-        if(NOT CUPS_LIBRARIES)
+        if(NOT CUPS_FOUND)
                 find_program(CUPS_CONFIG cups-config)
                 if(CUPS_CONFIG)
                         execute_process(COMMAND ${CUPS_CONFIG} --api-version OUTPUT_VARIABLE CUPS_API_VERSION OUTPUT_STRIP_TRAILING_WHITESPACE)
