--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1245,6 +1245,7 @@ set(WINDOWS_PLUGIN_FILES
         src/collectors/windows.plugin/windows_plugin.c
         src/collectors/windows.plugin/windows_plugin.h
         src/collectors/windows.plugin/GetSystemTimes.c
+        src/collectors/windows.plugin/GlobalMemoryStatusEx.c
 )
 
 set(PROC_PLUGIN_FILES
