--- a/src/claim/netdata-claim.sh.in
+++ b/src/claim/netdata-claim.sh.in
@@ -118,13 +118,8 @@ if ! command -v openssl >/dev/null 2>&1 ; then
 fi
 
 # shellcheck disable=SC2050
-if [ "@enable_cloud_POST@" = "no" ]; then
-    echo >&2 "This agent was built with --disable-cloud and cannot be claimed"
-    exit 3
-fi
-# shellcheck disable=SC2050
 if [ "@enable_aclk_POST@" != "yes" ]; then
-    echo >&2 "This agent was built without the dependencies for Cloud and cannot be claimed"
+    echo >&2 "This agent was built without Netdata Cloud support and cannot be claimed"
     exit 3
 fi
 
